<resources>
    <string name="app_name" translatable="false">FoodieApp</string>
    <string name="fab_for_reset" translatable="false">Reset card?</string>
    <string name="ingredientsDetail" translatable="false">Lorem ipsum dolor…</string>
    <string name="caloriesDetail" translatable="false">0000 Calorie(s)</string>
    <string name="mealTitleDetail" translatable="false">Meal Item</string>
    <string name="linkToRecipeDetail" translatable="false">https://www.mealitem.com/</string>
    <string name="ingredients" translatable="false">Ingredients list</string>
    <string name="calories" translatable="false">0000 Calorie(s)</string>
    <string name="mealTitle" translatable="false">Meal</string>
    <string name="linkToRecipe" translatable="false">Recipe</string>
    <string name="fab_for_add" translatable="false">Add new meal</string>
    <string name="meal_banner" translatable="false">Meal banner</string>
    <string name="activity_meal_item_detail" translatable="false">MealItemDetail</string>
    <string name="lorem_ipsum_paragraph" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales ullamcorper pellentesque.
        Fusce id est purus. Fusce volutpat aliquet enim sed venenatis. Ut dolor libero, tincidunt ut urna vel, vestibulum dignissim justo.
        Praesent eleifend, ante vitae ultricies accumsan, dui est aliquet elit, vel posuere libero purus eu nisl. Donec rhoncus neque at purus
        tempor, at molestie sapien lobortis. Morbi a laoreet eros. Maecenas ut elit nulla. Maecenas eu semper nibh, vitae dapibus lectus.
        Aliquam at bibendum mi. Duis tincidunt consectetur odio a aliquam. Vestibulum dolor dui, euismod ut neque ac, ultricies semper lorem.
    </string>

    <string-array name="meal_title">
        <item>Badminton</item>
        <item>Basketball</item>
        <item>Soccer</item>
        <item>Table Tennis</item>
        <item>Tennis</item>
    </string-array>

    <string-array name="meal_ingredients">
        <item>ingredients</item>
        <item>ingredients</item>
        <item>ingredients</item>
        <item>ingredients</item>
        <item>ingredients</item>
    </string-array>

    <string-array name="meal_description">
        <item>description</item>
        <item>description</item>
        <item>description</item>
        <item>description</item>
        <item>description</item>
    </string-array>

    <string-array name="meal_recipe_link">
        <item>https://www.mealitem.com</item>
        <item>https://www.mealitem.com</item>
        <item>https://www.mealitem.com</item>
        <item>https://www.mealitem.com</item>
        <item>https://www.mealitem.com</item>
    </string-array>

    <string-array name="meal_calories">
        <item>0000</item>
        <item>0000</item>
        <item>0000</item>
        <item>0000</item>
        <item>0000</item>
    </string-array>

    <array name="meal_images">
        <item>@drawable/img_badminton</item>
        <item>@drawable/img_basketball</item>
        <item>@drawable/img_soccer</item>
        <item>@drawable/img_tabletennis</item>
        <item>@drawable/img_tennis</item>
    </array>
</resources>